# KaIM

./: CMakeLists.txt  Makefile  README.md  epoll_server  epoll_server.c  example_test.cc  main.cpp  main2.cc  readme.md
CallFunction/: Cafun1  Cafun1.c  CallFunc1  CallFunc1.c  CallFunc2  CallFunc2.c  Callfun_struct  Callfun_struct.c  Callfunction.md  Makefile  arrayPtr  arrayPtr.c  epoll_loop.c  loop.c
ChatServer/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  ChatSession.cpp  ChatSession.h  项目文档.md
Docment/: 心跳包.md  简单的epoll回射型服务器.md  线程池.md
HttpServer/: HttpServer.cpp  HttpServer.h  HttpSession.cpp  HttpSession.h
IORUSE/: select.md  select_server.c
KaCo/: README.md
MsgDefine/: Base.sql  KaBaseDefine.pb.cc  KaBaseDefine.pb.h  KaBaseDefine.proto  MsgDefine.h  build.sh  table.sql  test_main.cc
Net/: Buffer.cpp  Buffer.h  CMakeLists.txt  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  KaAcceptor.cpp  KaAcceptor.h  KaCallBack.h  KaChannel.cpp  KaChannel.h  KaPoller.cpp  KaPoller.h  KaSocket.cpp  KaSocket.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  TcpSessin.cpp  TcpSessin.h
Util/: CMakeLists.txt  ConfigFileReader.cpp  ConfigFileReader.h  DaemonRun.cpp  DaemonRun.h  KaLog.cpp  KaLog.h  KaSingleton.h  KaZlibUtil.cpp  KaZlibUtil.h  Platfrom.h  ProtocoIStream.cpp  ProtocoIStream.h
epoll/: Makefile  README.md  cond_var.c  epoll_loop.c  epoll_loop.h  main.c  server
example/: example_socket.cc  example_time.cc
mul_pthread/: Makefile  ct_5_pthread  ct_5_pthread.cpp  test.c  (+6 more)
(+63 files in other folders)
